Fix tabs on mobile

--- a/_sass/_tabs.scss
+++ b/_sass/_tabs.scss
@@ -55,6 +55,10 @@
     opacity: 1;
     position: absolute;
     transition: all 0.35s ease-in;
+
+    @media screen and (max-width: $breakpoint-md) {
+      position: relative;
+    }
   }
 
   .hidden {
